complete user to notification service kafka